# motorlib

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.motorlib  readme.md
drivers/: Kconfig.drivers  drivers@0.1.overlay  drivers@0.2.overlay  drivers@Eulre.0.1.overlay
drivers/currsmp/: CMakeLists.txt  Kconfig.currsmp  currsmp_shunt_eulre_hal.c  currsmp_shunt_eulre_hal_adc.c  currsmp_shunt_eulre_hal_opm.c  currsmp_shunt_stm32.c
drivers/feedback/: CMakeLists.txt  Kconfig.feedback  feedback.c  feedback_abz_hall.c  feedback_as5047.c  feedback_as5047_copy.c  feedback_cube_hal_spi.c  feedback_tle5012b.c  feedback_tle5012b_copy.c  stm32_abs.c  stm32_abz_hall.c
drivers/feedback/ams_as5047/: CMakeLists.txt  Kconfig.as5047  ams_as5047.c
drivers/pwm/: CMakeLists.txt  Kconfig.pwm  pwm_stm32.c  pwm_stm32_cube.c  pwm_stm32g4_cube.c  svpwm.c
include/drivers/: currsmp.h  feedback.h  pwm.h  tle5012b.h
include/lib/bldcmotor/: motor.h
include/lib/foc/: foc.h  svm.h
lib/: CMakeLists.txt  Kconfig  foc.c  motor.c  motor_mode.c  motor_test_mode.c
lib/bldcmotor/: motor.c  motor_mode.c
lib/foc/: CMakeLists.txt  foc.c  foc_control_algorithm.c  foc_parameter_manager.c  svm.c
lib/motor/: CMakeLists.txt  motor_internal.c  motor_mode.c  motor_state.c  motor_test_mode.c
sample/: CMakeLists.txt  Kconfig  prj.conf  test_jscop.jscope
sample/boards/arm/zgm_001/: zgm_001.dts
sample/boards/arm/zgm_002/: Kconfig.zgm_002  zgm_002.dts
sample/drivers/gpio/: gpio_tca9539.c
sample/dts/bindings/zgm_002/drivers/feedback/: st,stm32-abz-hall.yaml
sample/src/: main.c  shell.c
(+2 files in other folders)
